[package]
name = "propolis"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

[dependencies]
libc.workspace = true
bitflags.workspace = true
bitstruct.workspace = true
byteorder.workspace = true
lazy_static.workspace = true
num_enum.workspace = true
thiserror.workspace = true
bhyve_api.workspace = true
dladm.workspace = true
viona_api.workspace = true
propolis_types.workspace = true
usdt = { workspace = true, features = ["asm"] }
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
anyhow.workspace = true
rfb.workspace = true
slog.workspace = true
serde.workspace = true
serde_arrays.workspace = true
erased-serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
once_cell.workspace = true
crucible-client-types = { workspace = true, optional = true }
crucible = { workspace = true, optional = true }
oximeter = { workspace = true, optional = true }
nexus-client = { workspace = true, optional = true }

# falcon
libloading = { workspace = true, optional = true }
p9ds = { workspace = true, optional = true }
ispf = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
softnpu-lib = { workspace = true, optional = true }
dlpi = { workspace = true, optional = true }

[dev-dependencies]
crossbeam-channel.workspace = true
tempfile.workspace = true
slog-term.workspace = true
slog-async.workspace = true
rand.workspace = true

[features]
default = []
crucible-full = ["crucible", "crucible-client-types", "oximeter", "nexus-client"]
falcon = ["libloading", "p9ds", "dlpi", "ispf", "rand", "softnpu-lib"]
omicron-build = []
