[package]
name = "propolis"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
anyhow.workspace = true
bhyve_api.workspace = true
bit_field.workspace = true
bitflags.workspace = true
bitstruct.workspace = true
byteorder.workspace = true
crucible = { workspace = true, optional = true }
crucible-client-types = { workspace = true, optional = true }
dladm.workspace = true
erased-serde.workspace = true
futures.workspace = true
lazy_static.workspace = true
libc.workspace = true
nexus-client = { workspace = true, optional = true }
num_enum.workspace = true
oximeter = { workspace = true, optional = true }
propolis_types.workspace = true
rfb.workspace = true
serde_arrays.workspace = true
serde_json.workspace = true
serde.workspace = true
slog.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
usdt = { workspace = true, features = ["asm"] }
uuid.workspace = true
viona_api.workspace = true

# falcon
libloading = { workspace = true, optional = true }
p9ds = { workspace = true, optional = true }
ispf = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
softnpu-lib = { workspace = true, optional = true }
dlpi = { workspace = true, optional = true }

[dev-dependencies]
crossbeam-channel.workspace = true
tempfile.workspace = true
slog-term.workspace = true
slog-async.workspace = true
rand.workspace = true

[features]
default = []
crucible-full = ["crucible", "crucible-client-types", "oximeter", "nexus-client"]
falcon = ["libloading", "p9ds", "dlpi", "ispf", "rand", "softnpu-lib"]
omicron-build = []
