[package]
name = "cargo-phd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
camino.workspace = true
cargo_metadata.workspace = true
escargot.workspace = true
owo-colors = { workspace = true, features = ["supports-colors"] }