[package]
name = "phd-framework"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
backoff.workspace = true
bhyve_api.workspace = true
camino = { workspace = true, features = ["serde1"] }
cfg-if.workspace = true
errno.workspace = true
futures.workspace = true
hex.workspace = true
libc.workspace = true
propolis-client = { workspace = true, features = ["generated"] }
propolis-server-config.workspace = true
propolis_types.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
ring.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_derive.workspace = true
serde_json.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-term.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
vte.workspace = true
rand.workspace = true
base64.workspace = true
crucible-client-types.workspace = true

