[package]
name = "phd-runner"
version = "0.1.0"
authors = ["Greg Colombo <greg@oxidecomputer.com>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
backtrace = "0.3.66"
clap = { version = "3.2.12", features = ["derive"] }
phd-framework = { path = "../framework" }
phd-tests = { path = "../tests" }
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
uuid = "1.1.2"
