[package]
name = "phd-runner"
version = "0.1.0"
authors = ["Greg Colombo <greg@oxidecomputer.com>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
backtrace.workspace = true
clap = { workspace = true, features = ["derive"] }
phd-framework.workspace = true
phd-tests.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true
