[package]
name = "phd-testcase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inventory = "0.3.0"
thiserror = "1.0.31"
phd-framework = { path = "../framework" }
phd-testcase-macros = { path = "../testcase_macro" }
anyhow = { version = "1.0.58", features = ["backtrace"] }
