[package]
name = "phd-testcase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inventory.workspace = true
thiserror.workspace = true
phd-framework.workspace = true
phd-testcase-macros.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
