[package]
name = "phd-testcase"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
futures.workspace = true
linkme.workspace = true
thiserror.workspace = true
phd-framework.workspace = true
phd-testcase-macros.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
