[package]
name = "phd-testcase-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
proc-macro-error.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
