[package]
name = "phd-tests"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
futures.workspace = true
http.workspace = true
propolis-client.workspace = true
phd-testcase.workspace = true
tracing.workspace = true
uuid.workspace = true
