[package]
name = "phd-tests"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
chrono.workspace = true
cpuid_utils.workspace = true
dropshot.workspace = true
futures.workspace = true
http.workspace = true
itertools.workspace = true
omicron-common.workspace = true
oximeter-producer.workspace = true
oximeter.workspace = true
phd-testcase.workspace = true
propolis-client.workspace = true
reqwest.workspace = true
slog-term.workspace = true
slog.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
