[package]
name = "header-check"
version = "0.0.0"
authors = ["Patrick Mooney <pmooney@oxide.computer>"]
license = "MPL-2.0"
build = "build.rs"
publish = false

[dependencies]
bhyve_api = { path = ".." }
libc = "0.2"

[build-dependencies]
cc = "1.0.73"
ctest2 = "0.4.3"

[[test]]
name = "main"
path = "test/main.rs"
harness = false
