[package]
name = "header-check"
version = "0.0.0"
authors = ["Patrick Mooney <pmooney@oxide.computer>"]
license = "MPL-2.0"
build = "build.rs"
publish = false

[dependencies]
bhyve_api = { path = ".." }
libc = "0.2"

[build-dependencies]
cc.workspace = true
ctest2.workspace = true

[[test]]
name = "main"
path = "test/main.rs"
harness = false
