[package]
name = "bhyve_api-hdrchk"
version = "0.0.0"
license = "MPL-2.0"
build = "build.rs"
publish = false

[dependencies]
bhyve_api_sys = { path = "../sys" }
libc = "0.2"

[build-dependencies]
cc = "1"
ctest2 = "0.4"
# Build-time conditions depend on the max API version defined in the crate
bhyve_api_sys = { path = "../sys" }

[[test]]
name = "main"
path = "test/main.rs"
harness = false
