[package]
name = "header-check"
version = "0.0.0"
authors = ["Patrick Mooney <pmooney@oxide.computer>"]
license = "MPL-2.0"
build = "build.rs"
publish = false

[dependencies]
viona_api.workspace = true
libc.workspace = true

[build-dependencies]
cc.workspace = true
ctest2.workspace = true

[[test]]
name = "main"
path = "test/main.rs"
harness = false
